Update build tools Update package name : me.xiaobailong24.smartrouter Add About to update from Google Play

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        //https://github.com/javiersantos/AppUpdater
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
