--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.xiaobailong24.smartrouter"
+        applicationId "me.xiaobailong24.smartrouter"
         minSdkVersion 18
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 24
+        versionCode 2
+        versionName "1.0.1"
     }
     buildTypes {
         release {
@@ -20,15 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:cardview-v7:24.0.+'
+    //AppUpdater
+    compile 'com.github.javiersantos:AppUpdater:2.2'
 }
 
-task clean(type: Exec) {
-    ext.lockhunter = '\"E:\\ProgramFiles\\LockHunter\\LockHunter.exe\"'
-    def buildDir = file(new File("build"))
-    commandLine 'cmd', "$lockhunter", '/delete', '/silent', buildDir
-}
+//task clean(type: Exec) {
+//    ext.lockhunter = '\"E:\\ProgramFiles\\LockHunter\\LockHunter.exe\"'
+//    def buildDir = file(new File("build"))
+//    commandLine 'cmd', "$lockhunter", '/delete', '/silent', buildDir
+//}
