--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.xiaobailong24.smartrouter"
         minSdkVersion 18
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.0.3"
+        versionCode 4
+        versionName "1.0.4"
     }
     buildTypes {
         release {
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.+'
     //AppUpdater
     compile 'com.github.javiersantos:AppUpdater:2.2'
+    //AdMob
+    compile 'com.google.android.gms:play-services:6.+'
 }
 
 //task clean(type: Exec) {
